commented out register for scaha link

--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -19,13 +19,13 @@
 				            
 				            <b:navbarLinks pull="left">
 				                <b:navLink icon="home" href="Welcome.xhtml"></b:navLink>
-				                <!-- <b:navLink icon="time" value="Tryouts" href="viewalltryouts.xhtml"></b:navLink> -->
+				                <!-- <b:navLink icon="time" value="Tryouts" href="viewalltryouts.xhtml"></b:navLink>-->
 				                <b:navLink icon="calendar" value="Sched./Standings" href="scoreboard.xhtml"></b:navLink>
 				                <b:navLink icon="stats" value="Stats" href="statscentral.xhtml"></b:navLink>
 				                <b:navLink icon="list-alt" value="Scoreboard" href="gamecentral.xhtml?season=SCAHA-1819&amp;initial=yes"></b:navLink>
-				                <b:navLink iconAwesome="trophy" value="Playoffs" href="playoffscentral.xhtml"></b:navLink> -->
+				                <b:navLink iconAwesome="trophy" value="Playoffs" href="playoffscentral.xhtml"></b:navLink>
 				                <b:navLink icon="eye-open" value="Suspensions" href="suspensions.xhtml"></b:navLink>
-				                <b:navLink icon="glyphicon-modal-window" value="Register for SCAHA" href="manageUSAHockey.xhtml" rendered="#{not empty profileBean.getProfile()}"></b:navLink>
+								<!-- <b:navLink icon="glyphicon-modal-window" value="Register for SCAHA" href="manageUSAHockey.xhtml" rendered="#{not empty profileBean.getProfile()}"></b:navLink>-->
 				                <br></br><b:navLink icon="list" value="Manager Portal" href="managerportal.xhtml" rendered="#{profileBean.getProfile().getScahamanager().getIsmanager()}"></b:navLink>
 				            	<!-- displays only when user is logged in -->
 				                
