--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -24,7 +24,7 @@
 				                <b:navLink icon="stats" value="Stats" href="statscentral.xhtml"></b:navLink>
 				                <b:navLink icon="list-alt" value="Scoreboard" href="gamecentral.xhtml?season=SCAHA-1819&amp;initial=yes"></b:navLink>
 				                <!--<b:navLink iconAwesome="trophy" value="Playoffs" href="playoffscentral.xhtml"></b:navLink>-->
-								<b:navLink icon="calendar" value="Club Tryouts" href="viewalltryouts.xhtml"></b:navLink>
+								<b:navLink icon="calendar" value="Team Openings" href="viewallopenings.xhtml"></b:navLink>
 								<b:navLink icon="eye-open" value="Suspensions" href="suspensions.xhtml"></b:navLink>
 								<b:navLink icon="glyphicon-modal-window" value="Register for SCAHA" href="manageUSAHockey.xhtml" rendered="#{not empty profileBean.getProfile()}"></b:navLink>
 				                <br></br><b:navLink icon="list" value="Manager Portal" href="managerportal.xhtml" rendered="#{profileBean.getProfile().getScahamanager().getIsmanager()}"></b:navLink>
@@ -94,7 +94,7 @@
 				                <b:navLink value="Add Coach to Teams" href="addcoachtoadditionalteams.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
 				                <b:navLink value="Review LOI's" href="registrarviewlois.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
 				                <b:navLink value="Review Coach LOI's" href="registrarcoachlois.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
-				                <b:navLink value="Release Player" href="startplayerrelease.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
+				                <!--<b:navLink value="Release Player" href="startplayerrelease.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>-->
 				            	<b:navLink value="View Club D-List" href="clubviewdelinquencylist.xhtml" rendered="#{profileBean.hasRoleList('C-PRES;C-DLIST')}" ></b:navLink>
 				            	<b:navLink value="View Releases Status" href="clubviewrelease.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}" ></b:navLink>
 				            	<b:navLink value="LOI Form" icon="ui-icon-arrowthickstop-1-s" href="downloads/SCAHA_LOI_AUTHORIZATION.docx" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
