fixed bug in coach loi's for girls team staff emails not being sent.

--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -136,8 +136,9 @@
 		         				<b:navLink value="Review Exhibition Games" href="reviewexhibitiongamesresults.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
 		         				<b:navLink value="Manage Suspensions" href="managesuspensionslist.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
 		         				<b:navLink value="Quick Score" href="reviewscahagamesquickedit.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
-		         				
-		                    </b:navbarLinks>
+								<b:navLink value="Email Managers" href="emailmanagers.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
+
+							</b:navbarLinks>
 		            </b:navBar>
 				</b:column>
 			</b:row>
