added fix to loi void parents not receiving email.  turned releases back on.

--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -94,7 +94,7 @@
 				                <b:navLink value="Add Coach to Teams" href="addcoachtoadditionalteams.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
 				                <b:navLink value="Review LOI's" href="registrarviewlois.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
 				                <b:navLink value="Review Coach LOI's" href="registrarcoachlois.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
-				                <!--<b:navLink value="Release Player" href="startplayerrelease.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>-->
+				                <b:navLink value="Release Player" href="startplayerrelease.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
 				            	<b:navLink value="View Club D-List" href="clubviewdelinquencylist.xhtml" rendered="#{profileBean.hasRoleList('C-PRES;C-DLIST')}" ></b:navLink>
 				            	<b:navLink value="View Releases Status" href="clubviewrelease.xhtml" rendered="#{profileBean.hasRoleList('C-REG')}" ></b:navLink>
 				            	<b:navLink value="LOI Form" icon="ui-icon-arrowthickstop-1-s" href="downloads/SCAHA_LOI_AUTHORIZATION.docx" rendered="#{profileBean.hasRoleList('C-REG')}"></b:navLink>
