turn on logging to try and solve issues.

--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -21,7 +21,7 @@
 				                <b:navLink icon="home" href="Welcome.xhtml"></b:navLink>
 				                <b:navLink icon="time" value="Tryouts" href="viewalltryouts.xhtml"></b:navLink>
 								<b:navLink icon="time" value="Team Openings" href="viewallopenings.xhtml"></b:navLink>
-				                <!--<b:navLink icon="calendar" value="Sched./Standings" href="scoreboard.xhtml"></b:navLink>-->
+				                <b:navLink icon="calendar" value="Sched./Standings" href="scoreboard.xhtml"></b:navLink>
 				                <b:navLink icon="stats" value="Stats" href="statscentral.xhtml"></b:navLink>
 				                <b:navLink icon="list-alt" value="Scoreboard" href="gamecentral.xhtml?season=SCAHA-1819&amp;initial=yes"></b:navLink>
 				                <!--<b:navLink iconAwesome="trophy" value="Playoffs" href="playoffscentral.xhtml"></b:navLink>
@@ -157,7 +157,8 @@
 							<b:navbarLinks>
 				        		<b:navLink value="Team Penalty Counts" href="viewteampenaltycount.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
 				        		<b:navLink value="Manage Rosters" href="managerosters.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
-				        		<b:navLink value="Manage Suspensions" href="managesuspensionslist.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>        
+				        		<b:navLink value="Manage Suspensions" href="managesuspensionslist.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
+
 		         			</b:navbarLinks>
 		            </b:navBar>
 				</b:column>
