--- a/WebContent/WEB-INF/templates/footer.xhtml
+++ b/WebContent/WEB-INF/templates/footer.xhtml
@@ -77,6 +77,9 @@
 						<b:column><b:link value="Guidebook" href="downloads/SCAHA-Guidebook.pdf" target="_blank"/></b:column>
 					</b:row>
 					<b:row>
+						<b:column><b:link value="2022 Update Guidebook Rules" href="http://scaha.com/scoresheets/SCAHA_434672022_SCAHA_Approved_Rule_Changes_061322.pdf" target="_blank"/></b:column>
+					</b:row>
+					<b:row>
 						<b:column><b:link value="Coaches Certification" href="coachesinfo.xhtml"/></b:column>
 					</b:row>
 					<b:row>
