--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -22,10 +22,10 @@
 								<!--<b:navLink iconAwesome="trophy" value="Playoffs" href="playoffscentral.xhtml"></b:navLink>-->
 
                                 <!--<b:navLink icon="time" value="Tryouts" href="viewalltryouts.xhtml"></b:navLink>-->
-								<!--<b:navLink icon="time" value="Team Openings" href="viewallopenings.xhtml"></b:navLink>-->
+								<b:navLink icon="time" value="Team Openings" href="viewallopenings.xhtml"></b:navLink>
 				                <b:navLink icon="calendar" value="Sched./Standings" href="scoreboard.xhtml"></b:navLink>
 				                <b:navLink icon="stats" value="Stats" href="statscentral.xhtml"></b:navLink>
-				                <b:navLink icon="list-alt" value="Scoreboard" href="gamecentral.xhtml?season=SCAHA-2324&amp;initial=yes"></b:navLink>
+				                <!--<b:navLink icon="list-alt" value="Scoreboard" href="gamecentral.xhtml?season=SCAHA-2324&amp;initial=yes"></b:navLink>-->
 				                <b:navLink icon="calendar" value="Club Tryouts" href="viewalltryouts.xhtml"></b:navLink>
 								<b:navLink icon="eye-open" value="Suspensions" href="suspensions.xhtml"></b:navLink>
 								<b:navLink icon="glyphicon-modal-window" value="Register for SCAHA" href="manageUSAHockey.xhtml" rendered="#{not empty profileBean.getProfile()}"></b:navLink>
