added logix for sending an email to deputy commissioner when a team exceeds certain penalty minutes.

--- a/WebContent/WEB-INF/templates/footer.xhtml
+++ b/WebContent/WEB-INF/templates/footer.xhtml
@@ -74,11 +74,11 @@
 						<b:column><h:outputText value=" "/></b:column>
 					</b:row>
 					<b:row>
-						<b:column><b:link value="Guidebook" href="downloads/SCAHA-Guidebook.pdf" target="_blank"/></b:column>
+						<b:column><b:link value="Guidebook" href="downloads/2023-24-SCAHA-Guidebook_052123.pdf" target="_blank"/></b:column>
 					</b:row>
-					<b:row>
+					<!--<b:row>
 						<b:column><b:link value="2022 Update Guidebook Rules" href="http://scaha.com/scoresheets/SCAHA_434672022_SCAHA_Approved_Rule_Changes_061322.pdf" target="_blank"/></b:column>
-					</b:row>
+					</b:row>-->
 					<b:row>
 						<b:column><b:link value="Coaches Certification" href="coachesinfo.xhtml"/></b:column>
 					</b:row>
