added manager contact page for deputy commissioner.

--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -149,9 +149,9 @@
 								<b:navLink value="Email Managers" href="emailmanagers.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
 								<b:navLink value="View Non Completed Games" href="reviewscahagamesnotcompleted.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
 								<!--<b:navLink value="Run Finalled" href="processFinaledgames.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>-->
-								<b:navLink value="Fix Accounts" href="fixaccounts.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
-								<b:navLink value="Process Bullying" href="processbullying.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
-
+								<!--<b:navLink value="Fix Accounts" href="fixaccounts.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>-->
+								<!--<b:navLink value="Process Bullying" href="processbullying.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>-->
+								<b:navLink value="Manager Contact Info" href="playoffsmanagerlist.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
 							</b:navbarLinks>
 		            </b:navBar>
 				</b:column>
@@ -164,7 +164,7 @@
 				        		<b:navLink value="Team Penalty Counts" href="viewteampenaltycount.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
 				        		<b:navLink value="Manage Rosters" href="managerosters.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
 				        		<b:navLink value="Manage Suspensions" href="managesuspensionslist.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
-
+								<b:navLink value="Manager Contact Info" href="playoffsmanagerlist.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
 		         			</b:navbarLinks>
 		            </b:navBar>
 				</b:column>
