fixed open connection as a part of login process

--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -19,7 +19,7 @@
 				            
 				            <b:navbarLinks pull="left">
 				                <b:navLink icon="home" href="Welcome.xhtml"></b:navLink>
-								<!--<b:navLink iconAwesome="trophy" value="Playoffs" href="playoffscentral.xhtml"></b:navLink>-->
+								<b:navLink iconAwesome="trophy" value="Playoffs" href="playoffscentral.xhtml"></b:navLink>
 
                                 <!--<b:navLink icon="time" value="Tryouts" href="viewalltryouts.xhtml"></b:navLink>-->
 								<b:navLink icon="time" value="Team Openings" href="viewallopenings.xhtml"></b:navLink>
@@ -148,7 +148,7 @@
 		         				<b:navLink value="Quick Score" href="reviewscahagamesquickedit.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
 								<b:navLink value="Email Managers" href="emailmanagers.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
 								<b:navLink value="View Non Completed Games" href="reviewscahagamesnotcompleted.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
-								<!--<b:navLink value="Run Finalled" href="processFinaledgames.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>-->
+								<b:navLink value="Run Finalled" href="processFinaledgames.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
 								<!--<b:navLink value="Fix Accounts" href="fixaccounts.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>-->
 								<!--<b:navLink value="Process Bullying" href="processbullying.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>-->
 								<b:navLink value="Manager Contact Info" href="playoffsmanagerlist.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
