added a check for when registrars login they see their correct club team options

--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -150,6 +150,7 @@
 								<!--<b:navLink value="Fix Accounts" href="fixaccounts.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>-->
 								<!--<b:navLink value="Process Bullying" href="processbullying.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>-->
 								<b:navLink value="Manager Contact Info" href="playoffsmanagerlist.xhtml" rendered="#{profileBean.hasRoleList('S-VICE')}"></b:navLink>
+								<b:navLink value="Usa Hockey Import" href="processusahockeyrosterupload.xhtml" rendered="#{profileBean.hasRoleList('S-STATS')}"></b:navLink>
 							</b:navbarLinks>
 		            </b:navBar>
 				</b:column>
