added fix for registratin failing on null pgmiddle field in usa hocke yreg.

--- a/WebContent/WEB-INF/templates/footer.xhtml
+++ b/WebContent/WEB-INF/templates/footer.xhtml
@@ -36,9 +36,9 @@
 					<b:row>
 						<b:column><b:link value="Tournaments" href="viewtournamentform.xhtml"/></b:column>
 					</b:row>
-					<b:row>
+					<!--<b:row>
 						<b:column><b:link value="Select Camp" href="selectcamp.xhtml"/></b:column>
-					</b:row>
+					</b:row>-->
 				</b:container>
 			</b:column>
 			<b:column span="1">&nbsp;</b:column>
@@ -79,15 +79,15 @@
 					<!--<b:row>
 						<b:column><b:link value="2022 Update Guidebook Rules" href="http://scaha.com/scoresheets/SCAHA_434672022_SCAHA_Approved_Rule_Changes_061322.pdf" target="_blank"/></b:column>
 					</b:row>-->
-					<b:row>
+					<!--<b:row>
 						<b:column><b:link value="Coaches Certification" href="coachesinfo.xhtml"/></b:column>
-					</b:row>
+					</b:row>-->
 					<b:row>
 						<b:column><b:link value="Manager Tools" href="managertools.xhtml"/></b:column>
 					</b:row>
-					<b:row>
+					<!--<b:row>
 						<b:column><b:link value="Safesport" href="safesport.xhtml"/></b:column>
-					</b:row>
+					</b:row>-->
 				</b:container>
 			</b:column>
 			<b:column span="1">&nbsp;</b:column>
@@ -123,7 +123,7 @@
 		</b:row>
 		<b:row>
 			<b:column span="14">
-				<br/><div style="text-align: center;">©SCAHA 2019</div>
+				<br/><div style="text-align: center;">©SCAHA 2024</div>
 			</b:column>
 		</b:row>
 	</b:container>
